# LumenRoll

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
backend/: .env.example  package.json
backend/src/: index.js
backend/src/db/: schema.sql
backend/src/routes/: bet.js  house.js
backend/src/services/: contract.js  randomness.js  stellar.js
contract/: Cargo.toml  Makefile
contract/src/: lib.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: WalletButton.jsx
scripts/: init_history.sh  init_organic_history.sh
