[package]
name = "lumen-roll-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
lto = true
codegen-units = 1
[package]
name = "lumen-roll-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
lto = true
codegen-units = 1
// touch 127
// touch 131
// touch 133
// touch 135
// touch 136
// touch 148
// touch 165
// touch 168
// touch 196
// touch 199
// touch 201
// touch 225
// touch 234
// touch 235
// touch 242
// touch 244
// touch 246
// touch 260
// touch 269
// touch 274
// touch 305
// touch 306
// touch 313
// touch 319
