[package]
name = "lumen-roll-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.2"
derive_arbitrary = "=1.3.2"

[dev-dependencies]
soroban-sdk = { version = "20.0.2", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
lto = true
codegen-units = 1
